--- a/views/instructors/show.njk
+++ b/views/instructors/show.njk
@@ -14,7 +14,7 @@
 
         <div class="item">
             <div>Idade</div>
-            <div>{{ instructor.birth }}</div>
+            <div>{{ instructor.age }}</div>
         </div>
 
         <div class="item">
@@ -36,6 +36,7 @@
             <div>{{ instructor.created_at }}</div>
         </div>
 
+        <a href="/instructors/{{ instructor.id }}/edit" class="button">Editar</a>
 
     </section>
 </div>
