--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 :root {
-    --rocketseat-color: #7159c1;
-    --secondary-color: #f7df1e;
+    --primary-color: #2f5fff;
+    --secondary-color: #ffac46;
+    --xxx3-color: #30a4fd;
+    --xxx4-color: #f23a0c;
+    --xxx5-color: #b7ed17;
 }
+
 *{
     margin: 0;
     padding: 0;
@@ -12,15 +16,15 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    color: var(--rocketseat-color);
+    background-color: var(--primary-color);
 }
 
 header {
-    background-color: white;
     width: 100%;
     padding: 32px;
     text-align: center;
     box-sizing: border-box;
+    color: white;
 }
 
 .links {
@@ -33,24 +37,24 @@ header {
 
 .links a {
     text-decoration: none;
-    color: #777;
+    color:white;
     position: relative;
 }
 
 .links a.active {
     font-weight: bold;
-    color: var(--rocketseat-color);
+    color: var(--secondary-color);
 }
 
 .links a:hover {
-    color: var(--rocketseat-color);
+    color: var(--secondary-color);
 }
 
 .links a::after {
     content: "";
     width: 0;
     height: 2px;
-    background-color: var(--rocketseat-color);
+    background-color: var(--secondary-color);
     position: absolute;
     left: 0;
     bottom: -4px;
@@ -63,12 +67,12 @@ header {
 /* CARD */
 
 .card {
-    background-color: white;
+    background-color: #f9f9f9;
     width: 800px;
     min-height: 400px;
     margin: 45px auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 40% 60%;
     box-shadow: 0 2px 6px -2px rgba(0, 0, 0, 0.5);
 
     animation: up 200ms ease-out;
@@ -116,7 +120,7 @@ details h3, .details .item div:nth-child(1) {
 details h3 {
     text-transform: uppercase;
     font-weight: bold;
-    color: var(--rocketseat-color);
+    color: var(--primary-color);
 }
 
 .details .item span {
@@ -154,7 +158,7 @@ input::placeholder {
 
 button[type="submit"], a.button {
     padding: 8px 32px;
-    background-color: var(--rocketseat-color);
+    background-color: var(--primary-color);
     color: white;
     border-radius: 8px;
     margin-top: 16px;
@@ -171,7 +175,7 @@ a.button {
 
 #form-delete button[type="submit"] {
     margin-top: 12px;
-    background-color: lightcoral;
+    background-color: var(--xxx4-color);
 }
 
 .table-container {
@@ -221,7 +225,7 @@ tbody tr td:first-child span {
 }
 
 tbody tr td:last-child a, .table-container > a {
-    background-color: var(--rocketseat-color);
+    background-color: var(--primary-color);
     padding: 8px 16px;
     text-decoration: none;
     text-transform: uppercase;
