--- a/views/students/edit.njk
+++ b/views/students/edit.njk
@@ -4,22 +4,22 @@
 
 <div class="card">
 
-    <section class="avatar" style="background: url({{member.avatar_url}}) no-repeat center center / cover"></section>
+    <section class="avatar" style="background: url({{student.avatar_url}}) no-repeat center center / cover"></section>
     <section class="details">
 
-        <form method="POST" action="/members?_method=PUT">
+        <form method="POST" action="/students?_method=PUT">
 
                 <h3>Editar Membro</h3>
                 
-                {% include 'members/fields.njk' %}
+                {% include 'students/fields.njk' %}
 
-                <input type="hidden" name="id" value={{member.id}}>
+                <input type="hidden" name="id" value={{student.id}}>
 
             
         </form>
 
-        <form id="form-delete" action="/members?_method=DELETE" method="post">
-            <input type="hidden" name="id" value={{member.id}}>
+        <form id="form-delete" action="/students?_method=DELETE" method="post">
+            <input type="hidden" name="id" value={{student.id}}>
             <button type="submit">Deletar</button>
         </form>
 
