--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -2,30 +2,30 @@
 
 {% block content %}
 <div class="card">
-    <section class="avatar" style="background: url({{ instructor.avatar_url }}) no-repeat center center / cover"></section>
+    <section class="avatar" style="background: url({{ teacher.avatar_url }}) no-repeat center center / cover"></section>
     <section class="details">
 
         <h3>Detalhes</h3>
 
         <div class="item">
-            <div>Instrutor</div>
-            <div>{{ instructor.name }}</div>
+            <div>Professor</div>
+            <div>{{ teacher.name }}</div>
         </div>
 
         <div class="item">
             <div>Idade</div>
-            <div>{{ instructor.age }}</div>
+            <div>{{ teacher.age }}</div>
         </div>
 
         <div class="item">
-            <div>Sexo</div>
-            <div>{{ "Masculino" if instructor.gender == "M" else "Feminino" }}</div>
+            <div>Escolaridade</div>
+            <div>{{ teacher.degree }}</div>
         </div>
 
         <div class="item">
             <div>Acompanhamento</div>
             <div>
-                {% for service in instructor.services %}
+                {% for service in teacher.services %}
                 <span>{{ service }}</span>
                 {% endfor %}
             </div>
@@ -33,10 +33,10 @@
 
         <div class="item">
             <div>Desde</div>
-            <div>{{ instructor.created_at }}</div>
+            <div>{{ teacher.created_at }}</div>
         </div>
 
-        <a href="/instructors/{{ instructor.id }}/edit" class="button">Editar</a>
+        <a href="/teachers/{{ teacher.id }}/edit" class="button">Editar</a>
 
     </section>
 </div>
