--- a/views/layout.njk
+++ b/views/layout.njk
@@ -3,7 +3,7 @@
 
     <head>
         {% block head %} 
-            <title>Class Manager</title>
+            <title>Gym Manager</title>
         {% endblock %}
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -13,8 +13,8 @@
     <body>
         <header>
             <div class="links">
-                <a href="/teachers">Teachers</a>
-                <a href="/students">Students</a>
+                <a href="/instructors">Instructors</a>
+                <a href="/members">Members</a>
             </div>
         </header>
 
