--- a/src/app/views/members/index.njk
+++ b/src/app/views/members/index.njk
@@ -2,7 +2,20 @@
 
 {% block content %}
 <div class="card table-container">
-    <a href="/members/create">Novo</a>
+
+    <div class="header">
+        <a class="button" href="/members/create">Novo</a>
+        <form action="/members" methor="GET">
+            <input 
+                type="text" 
+                name="filter" 
+                placeholder="Nome ou Email"
+                value={{filter}}
+            >
+            <button type="submit">Filtrar</button>
+        </form>
+
+    </div>
     <table width="100%">
         <thead>
             <tr>
@@ -27,6 +40,13 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <div class="pagination"
+    data-page={{pagination.page}}
+    data-total={{pagination.total}}
+    data-filter={{filter}}
+    >
+    </div>
 </div>
 {% endblock content %}
 
