--- a/public/style.css
+++ b/public/style.css
@@ -265,4 +265,32 @@ tbody tr td:last-child a, .table-container > a {
     margin: 0;
 }
 
+.table-container {
+    display: grid;
+    grid-template: 64px 1fr 16px / 1fr;
+}
+
+.table-container .header {
+    margin: 0;
+    align-self: start;
+}
+
+.table-container .pagination {
+    margin: 0;
+    align-self: end;
+    justify-self: center;
+}
+
+.pagination a, .pagination span {
+    color: var(--rocketseat-color);
+    text-decoration: none;
+    margin-right: 12px;
+}
+
+.pagination a:hover {
+    filter: brightness(0.3);
+    border-bottom: 1px solid var(--rocketseat-color);
+}
+
+
 
