--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -38,6 +38,13 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <div class="pagination"
+    data-page={{pagination.page}}
+    data-total={{pagination.total}}
+    data-filter={{filter}}
+    >
+    </div>
 </div>
 {% endblock content %}
 
